--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "black>=25.1.0",
+    "pre-commit>=4.2.0",
+    "ruff>=0.11.2",
 ]
 
-[tool.black]
+[tool.ruff]
 line-length = 100
-target-version = ["py313"]
