--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,17 @@ description = "Dashboard Service for Analytical Platform"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "django>=5.1.7",
-    "django-extensions>=3.2.3",
-    "psycopg[binary]>=3.2.6",
-    "python-dotenv>=1.1.0",
+    "django==5.1.7",
+    "django-extensions==3.2.3",
+    "psycopg[binary]==3.2.6",
+    "python-dotenv==1.1.0",
 ]
 
 [dependency-groups]
 dev = [
-    "django-debug-toolbar>=5.1.0",
-    "pre-commit>=4.2.0",
-    "ruff>=0.11.2",
+    "django-debug-toolbar==5.1.0",
+    "pre-commit==4.2.0",
+    "ruff==0.11.2",
 ]
 
 [tool.ruff]
