--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,18 @@ dev = [
     "ruff==0.11.2",
 ]
 
-[tool.ruff]
-line-length = 100
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
