--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Dashboard Service for Analytical Platform"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "authlib==1.5.2",
     "django==5.1.7",
     "django-extensions==3.2.3",
     "psycopg[binary]==3.2.6",
     "python-dotenv==1.1.0",
+    "requests==2.32.3",
 ]
 
 [dependency-groups]
