--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django==5.1.7",
     "django-extensions==3.2.3",
     "psycopg[binary]==3.2.6",
+    "pytest-django>=4.11.1",
     "python-dotenv==1.1.0",
     "requests==2.32.3",
 ]
@@ -17,6 +18,7 @@ dependencies = [
 dev = [
     "django-debug-toolbar==5.1.0",
     "pre-commit==4.2.0",
+    "pytest>=8.3.5",
     "ruff==0.11.2",
 ]
 
@@ -38,3 +40,6 @@ select = [
     # isort
     "I",
 ]
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "dashboard_service.settings.test"
