--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "test": "tests"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "5.1.2",
     "amazon-quicksight-embedding-sdk": "2.10.0",
-    "govuk-frontend": "5.9.0",
-    "moment": "2.30.1",
+    "govuk-frontend": "^5.9.0",
     "punycode": "2.3.1",
     "regenerator-runtime": "0.14.1",
     "uuid": "9.0.1"
@@ -20,7 +18,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css": "sass --quiet-deps --load-path=./ --style=compressed scss/app.scss:static/assets/css/app.css"
+    "css": "sass --quiet-deps --load-path=./ --style=compressed static/sass/app.scss:static/app.css"
   },
   "repository": {
     "type": "git",
