--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css": "sass --quiet-deps --load-path=./ --style=compressed static/sass/app.scss:static/app.css"
+    "css": "sass --quiet-deps --load-path=./ --style=compressed scss/app.scss:static/assets/css/app.css"
   },
   "repository": {
     "type": "git",
