--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "tests"
   },
   "dependencies": {
+    "@ministryofjustice/frontend": "5.1.2",
     "amazon-quicksight-embedding-sdk": "2.10.0",
-    "govuk-frontend": "^5.9.0",
+    "govuk-frontend": "5.9.0",
+    "moment": "2.30.1",
     "punycode": "2.3.1",
     "regenerator-runtime": "0.14.1",
     "uuid": "9.0.1"
