--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pytest-django>=4.11.1",
     "python-dotenv==1.1.0",
     "requests==2.32.3",
+    "sentry-sdk==2.26.1",
 ]
 
 [dependency-groups]
