--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 ---
-name: Release
+name: 🔖 Chart Release
 
 on:
   push:
@@ -9,82 +9,14 @@ on:
 permissions: {}
 
 jobs:
-  release-image:
-    name: Release Image
-    runs-on: ubuntu-latest
+  chart-release:
+    name: Chart Release
     permissions:
-      contents: read
+      actions: read
+      attestations: write
+      contents: write
       id-token: write
       packages: write
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-
-      - name: Install cosign
-        id: install_cosign
-        uses: sigstore/cosign-installer@4959ce089c160fddf62f7b42464195ba1a56d382 # v3.6.0
-
-      - name: Log in to GitHub Container Registry
-        id: login_ghcr
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and Push
-        id: build_and_push
-        uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85 # v6.7.0
-        with:
-          file: container/Dockerfile
-          push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
-
-      - name: Sign
-        id: sign
-        shell: bash
-        run: |
-          cosign sign --yes ghcr.io/${{ github.repository }}@${{ steps.build_and_push.outputs.digest }}
-
-      - name: Verify
-        id: verify
-        run: |
-          cosign verify \
-            --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
-            --certificate-identity=https://github.com/${{ github.repository }}/.github/workflows/release.yml@refs/tags/${{ github.ref_name }} \
-            ghcr.io/${{ github.repository }}@${{ steps.build_and_push.outputs.digest }}
-
-  release-chart:
-    name: Release Chart
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-      packages: write
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-
-      - name: Set Up Helm
-        id: setup_helm
-        uses: azure/setup-helm@fe7b79cd5ee1e45176fcad797de68ecaf3ca4814 # v4.2.0
-
-      - name: Log in to GitHub Container Registry
-        id: login_ghcr
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Package Chart
-        id: package_chart
-        run: |
-          helm package chart --destination .helm-deploy
-
-      - name: Push Chart
-        id: push_chart
-        run: |
-          helm push .helm-deploy/analytical-platform-dashboard-service-${{ github.ref_name }}.tgz oci://ghcr.io/ministryofjustice/analytical-platform-charts
+    uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-chart-release.yml@604db7bf80e5af74f8c081d47a406d293eeae029 # v2.1.0
+    with:
+      chart-name: analytical-platform-dashboard-service
