--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 DJANGO_SETTINGS_MODULE=dashboard_service.settings.local
 
-SECRET_KEY = "example_secret_key"
-DB_NAME = "dashboard_service"
+DB_NAME=dashboard_service
+SECRET_KEY=example_secret_key
 
 # auth0 - dev credentials
-AUTH0_CLIENT_ID="found_in_auth0"
-AUTH0_CLIENT_SECRET="found_in_auth0"
-AUTH0_DOMAIN=example.eu.auth0.com
 # For requesting access token from auth0 for control panel API
-AUTH0_AUDIENCE="found_in_auth0"
+AUTH0_AUDIENCE=found_in_auth0
+AUTH0_CLIENT_ID=found_in_auth0
+AUTH0_CLIENT_SECRET=found_in_auth0
+AUTH0_DOMAIN=example.eu.auth0.com
 
-CONTROL_PANEL_API_URL="http://localhost:8000/api/cpanel/v1/"
+CONTROL_PANEL_API_URL=http://localhost:8000/api/cpanel/v1/
