--- a/.yaml-lint.yml
+++ b/.yaml-lint.yml
@@ -9,5 +9,5 @@ rules:
   truthy: disable
 
 ignore:
-  - '**/chart/templates/*.yaml'
-  - '**/chart/templates/tests/*.yaml'
+  - "**/chart/templates/*.yaml"
+  - "**/chart/templates/tests/*.yaml"
