--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -22,12 +22,14 @@ jobs:
       super-linter-variables: |
         {
           "VALIDATE_CHECKOV": false,
+          "VALIDATE_DOCKERFILE_HADOLINT": false,
           "VALIDATE_HTML": false,
+          "VALIDATE_JSCPD": false,
           "VALIDATE_KUBERNETES_KUBECONFORM": false,
           "VALIDATE_PYTHON_BLACK": false,
           "VALIDATE_PYTHON_ISORT": false,
           "VALIDATE_PYTHON_PYINK": false,
           "VALIDATE_PYTHON_PYLINT": false,
           "VALIDATE_PYTHON_MYPY": false,
-          "YAML_CONFIG_FILE": ".yaml-lint.yml"
+          "VALIDATE_YAML": false
         }
