--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "analytical-platform-dashboard-service.serviceAccountName" . }}
+  name: {{ include "dashboard-service.serviceAccountName" . }}
   labels:
-    {{- include "analytical-platform-dashboard-service.labels" . | nindent 4 }}
+    {{- include "dashboard-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
