--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -19,4 +19,4 @@ jobs:
       packages: write
     uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-chart-release.yml@604db7bf80e5af74f8c081d47a406d293eeae029 # v2.1.0
     with:
-      chart-name: analytical-platform-dashboard-service
+      chart-name: dashboard-service
