--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -49,7 +49,7 @@ app:
     - name: APP_ENV
       value: development
     - name: DJANGO_SETTINGS_MODULE
-      value: ap.settings.development
+      value: dashboard_service.settings.development
     - name: SECRET_KEY
       valueFrom:
         secretKeyRef:
