--- a/.github/workflows/code-ql-scan.yml
+++ b/.github/workflows/code-ql-scan.yml
@@ -17,3 +17,5 @@ jobs:
       contents: read
       security-events: write
     uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-codeql-analysis.yml@8382cff2a4582e7ac6906fb4d4213b40108e2ea5 # v2.8.0
+    with:
+      languages: '["actions", "python"]'
