--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv==1.1.0",
     "requests==2.32.4",
     "sentry-sdk==2.28.0",
+    "structlog==25.4.0",
     "whitenoise==6.9.0",
 ]
 
