--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "authlib==1.5.2",
     "django==5.2.1",
     "django-extensions==4.1",
+    "django-structlog==9.1.1",
     "gunicorn==23.0.0",
     "psycopg[binary]==3.2.9",
     "pytest-django>=4.11.1",
