--- a/.github/workflows/code-ql-scan.yml
+++ b/.github/workflows/code-ql-scan.yml
@@ -17,3 +17,5 @@ jobs:
       contents: read
       security-events: write
     uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-codeql-analysis.yml@0c3b5555edfbbb10220ed435359dfd6769ad79ed # v3.2.0
+    with:
+      languages: '["actions", "python"]'
