--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,25 +5,25 @@ description = "Dashboard Service for Analytical Platform"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "authlib==1.6.3",
+    "authlib==1.6.4",
     "django==5.2.6",
     "django-extensions==4.1",
     "django-structlog==9.1.1",
     "gunicorn==23.0.0",
-    "psycopg[binary]==3.2.9",
+    "psycopg[binary]==3.2.10",
     "pytest-django>=4.11.1",
     "python-dotenv==1.1.1",
     "requests==2.32.5",
-    "sentry-sdk==2.35.1",
-    "whitenoise==6.9.0",
+    "sentry-sdk==2.38.0",
+    "whitenoise==6.11.0",
 ]
 
 [dependency-groups]
 dev = [
     "django-debug-toolbar==6.0.0",
     "pre-commit==4.3.0",
-    "pytest>=8.3.5",
-    "ruff==0.12.11",
+    "pytest==8.4.2",
+    "ruff==0.13.1",
 ]
 
 [tool.ruff]
