--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "5.2.1",
     "amazon-quicksight-embedding-sdk": "2.10.0",
-    "govuk-frontend": "5.12.0",
-    "moment": "2.30.1",
-    "punycode": "2.3.1",
-    "regenerator-runtime": "0.14.1",
-    "uuid": "9.0.1"
+    "govuk-frontend": "5.12.0"
   },
   "devDependencies": {
     "prettier": "3.6.2",
