--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "dashboard-service.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dashboard-service.labels" . | nindent 4 }}
 spec:
