--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "dashboard-service.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dashboard-service.labels" . | nindent 4 }}
 spec:
