--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "dashboard-service.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dashboard-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
