Add support for writable /tmp volume when root FS is read-only
- Updated Deployment template to allow configurable volumeMounts and volumes
- Mounted emptyDir at /tmp to fix Gunicorn/Django temp file errors
- Keeps readOnlyRootFilesystem enabled while ensuring app functions correctly

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -49,12 +49,20 @@ spec:
             {{- toYaml .Values.app.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.app.resources | nindent 12 }}
+          {{- with .Values.app.volumeMounts }}
+          volumeMounts:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
       affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.app.volumes }}
+      volumes:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
