--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -14,3 +14,5 @@ jobs:
     permissions:
       contents: read
     uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-container-scan.yml@68ce2de03822a2ca9c6976e558331cd362271155 # v5.1.0
+    with:
+      clean-actions-runner: false
