--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,24 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "authlib==1.6.5",
-    "django==5.2.7",
+    "django==5.2.8",
     "django-extensions==4.1",
-    "django-structlog==9.1.1",
+    "django-structlog==10.0.0",
     "gunicorn==23.0.0",
-    "psycopg[binary]==3.2.11",
-    "pytest-django>=4.11.1",
-    "python-dotenv==1.1.1",
+    "psycopg[binary]==3.2.12",
+    "pytest-django==4.11.1",
+    "python-dotenv==1.2.1",
     "requests==2.32.5",
-    "sentry-sdk==2.42.1",
+    "sentry-sdk==2.43.0",
     "whitenoise==6.11.0",
 ]
 
 [dependency-groups]
 dev = [
-    "django-debug-toolbar==6.0.0",
+    "django-debug-toolbar==6.1.0",
     "pre-commit==4.3.0",
     "pytest==8.4.2",
-    "ruff==0.14.1",
+    "ruff==0.14.3",
 ]
 
 [tool.ruff]
