--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -30,6 +30,11 @@ jobs:
           load: true
           tags: dashboard_service
 
+      - name: Pull Test Dependencies
+        id: pull_test_dependencies
+        run: |
+          docker compose --file docker-compose-test.yml pull db
+
       - name: Run Python Tests
         id: run_python_tests
         run: |
