--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -33,7 +33,14 @@ jobs:
       - name: Pull Test Dependencies
         id: pull_test_dependencies
         run: |
-          docker compose --file docker-compose-test.yml pull db
+          for i in 1 2 3; do
+            docker compose --file docker-compose-test.yml pull db && exit 0
+            echo "Attempt $i failed, retrying in 10s..."
+            sleep 10
+          done
+          exit 1
+        env:
+          IMAGE_TAG: dashboard_service
 
       - name: Run Python Tests
         id: run_python_tests
