--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -26,10 +26,10 @@ jobs:
           "VALIDATE_DOCKERFILE_HADOLINT": false,
           "VALIDATE_HTML": false,
           "VALIDATE_JSCPD": false,
+          "VALIDATE_JUPYTER_NBQA_RUFF": false,
           "VALIDATE_KUBERNETES_KUBECONFORM": false,
           "VALIDATE_PYTHON_BLACK": false,
           "VALIDATE_PYTHON_ISORT": false,
-          "VALIDATE_PYTHON_PYINK": false,
           "VALIDATE_PYTHON_PYLINT": false,
           "VALIDATE_PYTHON_MYPY": false,
           "VALIDATE_YAML": false
