--- a/.github/workflows/code-ql-scan.yml
+++ b/.github/workflows/code-ql-scan.yml
@@ -14,8 +14,9 @@ jobs:
   codeql-analysis:
     name: CodeQL Analysis
     permissions:
+      actions: read
       contents: read
       security-events: write
-    uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-codeql-analysis.yml@2ab174150aeb0a6003afd1c0b4316698720b3b6b # v5.5.0
+    uses: ministryofjustice/analytical-platform-github-actions/.github/workflows/reusable-codeql-analysis.yml@a51023a06bef0183181849be702c10a218e97bd8 # v6.1.0
     with:
       languages: '["actions", "python"]'
